<resources>
    <string name="app_name">Conversion App</string>
    <string name="menu_converter">Converter</string>
    <string name="menu_calculator">Calculate</string>
    <string name="convert">Convert</string>
    <string name="select_a_currency_to_convert_to_and_from">Select a Currency to convert to and from</string>
    <string name="calculator">Calculator</string>
    <string name="converter">Converter</string>
    <string name="select_currencies">Select currencies to add. The second one is the final currency</string>
    <string name="calculate">Calculate</string>


    <string-array name="conversionsFrom">
        <item>Select initial currency…</item>
        <item>EUR to</item>
        <item>USD to</item>
        <item>CAD to</item>
        <item>AUD to</item>
        <item>CNY to</item>
        <item>JPY to</item>
    </string-array>

    <string-array name="conversionsTo">
        <item>Select desired currency…</item>
        <item>EUR</item>
        <item>USD</item>
        <item>CAD</item>
        <item>AUD</item>
        <item>CNY</item>
        <item>JPY</item>
    </string-array>

    <string-array name="typeOf">
        <item>Select currency…</item>
        <item>EUR</item>
        <item>USD</item>
        <item>CAD</item>
        <item>AUD</item>
        <item>CNY</item>
        <item>JPY</item>
    </string-array>


    <string-array name="operations">
        <item>+</item>
        <item>-</item>
    </string-array>

</resources>

